--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,17 +5,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
       - name: set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Initialize Gradle Wrapper
-        run: gradle wrapper # السيرفر سيقوم بإنشاء الملف الذي فشل في ترمكس
+
       - name: Build with Gradle
-        run: ./gradlew assembleDebug
+        run: |
+          # إنشاء ملف الإعدادات في السحاب فوراً
+          echo "include ':app'" > settings.gradle
+          # تشغيل البناء باستخدام النسخة المثبتة في النظام
+          gradle assembleDebug
+          
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: my-app
-          path: app/build/outputs/apk/debug/app-debug.apk
+          name: cookie-browser-apk
+          path: "**/build/outputs/apk/debug/*.apk"
