--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,20 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: set up JDK 17
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-
       - name: Build with Gradle
-        run: |
-          # إنشاء ملف الإعدادات في السحاب فوراً
-          echo "include ':app'" > settings.gradle
-          # تشغيل البناء باستخدام النسخة المثبتة في النظام
-          gradle assembleDebug
-          
+        run: gradle assembleDebug
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
