--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,15 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Build with Gradle
-        run: gradle assembleDebug
+      
+      - name: Make Gradlew Executable
+        run: chmod +x gradlew
+        
+      - name: Build with Gradle Wrapper
+        run: ./gradlew assembleDebug --stacktrace
+        
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: cookie-browser-apk
-          path: "**/build/outputs/apk/debug/*.apk"
+          name: CookieBrowser-V2
+          path: app/build/outputs/apk/debug/*.apk
