--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,14 +9,12 @@ android {
         applicationId "com.jsr.cookiebrowser"
         minSdk 21
         targetSdk 33
+        versionCode 1
+        versionName "1.0"
     }
-}
-
-repositories {
-    google()
-    mavenCentral()
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
 }
